<resources>
    <string name="app_name">CurrentSholat</string>
    <string name="title_activity_maps">Map</string>
    <string name="kirim_lokasi">Kirim Lokasi</string>
    <string name="lokasi_anda">Lokasi Anda:</string>

    <string name="subuh">Subuh</string>
    <string name="dzuhur">Dzuhur</string>
    <string name="ashar">Ashar</string>
    <string name="maghrib">Maghrib</string>
    <string name="isya">Isya</string>
    <string name="prayer_time">Prayer Time</string>
    <string name="location">Location: </string>
    <string name="myloc">myLoc</string>
    <string name="date">Date:</string>
    <string name="search">Search</string>

    <string name="beranda">Beranda</string>
    <string name="sholat">Sholat</string>
    <string name="kiblat">Kiblat</string>
    <string name="kesehatan">Kesehatan</string>
    <string name="author">Author</string>
</resources>
